--- a/Astroid Game/Astroid Game/Astroid Game.vcxproj
+++ b/Astroid Game/Astroid Game/Astroid Game.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
