You can now get all entities from the manager

--- a/Astroid Game/Astroid Game/Astroid Game.vcxproj
+++ b/Astroid Game/Astroid Game/Astroid Game.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="MathHelpers.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="ProjectileFactory.h" />
+    <ClInclude Include="ScreenWraping.h" />
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Transform.h" />
