--- a/Astroid Game/Astroid Game/Astroid Game.vcxproj.filters
+++ b/Astroid Game/Astroid Game/Astroid Game.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="ProjectileFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScreenWraping.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
