--- a/Astroid Game/Astroid Game/Astroid Game.vcxproj
+++ b/Astroid Game/Astroid Game/Astroid Game.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="ECS.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="MathHelpers.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="ProjectileFactory.h" />
