--- a/Astroid Game/Astroid Game/Astroid Game.vcxproj.filters
+++ b/Astroid Game/Astroid Game/Astroid Game.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="ScreenWraping.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InputManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
